add_subdirectory(lzma)

set(EDOPRO_CLIENT_SOURCE
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomCheckBox/CGUICustomCheckBox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomCheckBox/CGUICustomCheckBox.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomContextMenu/CGUICustomContextMenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomContextMenu/CGUICustomContextMenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomContextMenu/CGUICustomMenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomContextMenu/CGUICustomMenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomTabControl/CGUICustomTabControl.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomTabControl/CGUICustomTabControl.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomTable/CGUICustomTable.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomTable/CGUICustomTable.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomText/CGUICustomText.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUICustomText/CGUICustomText.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUIFileSelectListBox/CGUIFileSelectListBox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUIFileSelectListBox/CGUIFileSelectListBox.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUIImageButton/CGUIImageButton.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUIImageButton/CGUIImageButton.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CConfigMap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CConfigMap.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CGUIProgressBar.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CGUIProgressBar.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CGUISkinSystem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CGUISkinSystem.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CImageGUISkin.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/CImageGUISkin.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUISkinSystem/clipRects.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUITTFont/CGUITTFont.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CGUITTFont/CGUITTFont.h
	${CMAKE_CURRENT_SOURCE_DIR}/CGUITTFont/irrUString.h
	${CMAKE_CURRENT_SOURCE_DIR}/CProgressBar/CProgressBar.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CProgressBar/CProgressBar.h
	${CMAKE_CURRENT_SOURCE_DIR}/CXMLRegistry/CXMLNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CXMLRegistry/CXMLNode.h
	${CMAKE_CURRENT_SOURCE_DIR}/CXMLRegistry/CXMLRegistry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CXMLRegistry/CXMLRegistry.h
	${CMAKE_CURRENT_SOURCE_DIR}/IrrlichtCommonIncludes/CGUIButton.h
	${CMAKE_CURRENT_SOURCE_DIR}/IrrlichtCommonIncludes/CGUIScrollBar.h
	${CMAKE_CURRENT_SOURCE_DIR}/IrrlichtCommonIncludes/CGUITabControl.h
	${CMAKE_CURRENT_SOURCE_DIR}/IrrlichtCommonIncludes/os.h
	${CMAKE_CURRENT_SOURCE_DIR}/ResizeablePanel/ResizeablePanel.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ResizeablePanel/ResizeablePanel.h
	${CMAKE_CURRENT_SOURCE_DIR}/bufferio.h
	${CMAKE_CURRENT_SOURCE_DIR}/client_card.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/client_card.h
	${CMAKE_CURRENT_SOURCE_DIR}/client_field.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/client_field.h
	${CMAKE_CURRENT_SOURCE_DIR}/config.h
	${CMAKE_CURRENT_SOURCE_DIR}/core_utils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/core_utils.h
	${CMAKE_CURRENT_SOURCE_DIR}/data_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/data_manager.h
	${CMAKE_CURRENT_SOURCE_DIR}/deck_con.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/deck_con.h
	${CMAKE_CURRENT_SOURCE_DIR}/deck_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/deck_manager.h
	${CMAKE_CURRENT_SOURCE_DIR}/discord_wrapper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/discord_wrapper.h
	${CMAKE_CURRENT_SOURCE_DIR}/dllinterface.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/dllinterface.h
	${CMAKE_CURRENT_SOURCE_DIR}/drawing.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/duelclient.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/duelclient.h
	${CMAKE_CURRENT_SOURCE_DIR}/event_handler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/game.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/game.h
	${CMAKE_CURRENT_SOURCE_DIR}/generic_duel.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/generic_duel.h
	${CMAKE_CURRENT_SOURCE_DIR}/gframe.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/image_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/image_manager.h
	${CMAKE_CURRENT_SOURCE_DIR}/logging.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/logging.h
	${CMAKE_CURRENT_SOURCE_DIR}/materials.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/materials.h
	${CMAKE_CURRENT_SOURCE_DIR}/menu_handler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menu_handler.h
	${CMAKE_CURRENT_SOURCE_DIR}/mysignal.h
	${CMAKE_CURRENT_SOURCE_DIR}/netserver.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/netserver.h
	${CMAKE_CURRENT_SOURCE_DIR}/network.h
	${CMAKE_CURRENT_SOURCE_DIR}/ocgapi_types.h
	${CMAKE_CURRENT_SOURCE_DIR}/old_replay_mode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/readonlymemvfs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/readonlymemvfs.h
	${CMAKE_CURRENT_SOURCE_DIR}/replay.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/replay.h
	${CMAKE_CURRENT_SOURCE_DIR}/replay_mode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/replay_mode.h
	${CMAKE_CURRENT_SOURCE_DIR}/repo_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/repo_manager.h
	${CMAKE_CURRENT_SOURCE_DIR}/server_lobby.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/server_lobby.h
	${CMAKE_CURRENT_SOURCE_DIR}/single_mode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/single_mode.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound_backend.h
#	${CMAKE_CURRENT_SOURCE_DIR}/sound_irrklang.cpp
#	${CMAKE_CURRENT_SOURCE_DIR}/sound_irrklang.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound_manager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound_manager.h
#	${CMAKE_CURRENT_SOURCE_DIR}/sound_sdlmixer.cpp
#	${CMAKE_CURRENT_SOURCE_DIR}/sound_sdlmixer.h
	${CMAKE_CURRENT_SOURCE_DIR}/utils_gui.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/utils_gui.h
	${CMAKE_CURRENT_SOURCE_DIR}/utils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/utils.h
	${CMAKE_CURRENT_SOURCE_DIR}/windbot_panel.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/windbot_panel.h
	${CMAKE_CURRENT_SOURCE_DIR}/windbot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/windbot.h)

target_sources(EDOPro PRIVATE ${EDOPRO_CLIENT_SOURCE}
	${CMAKE_CURRENT_SOURCE_DIR}/discord_register_url_osx.m
	${CMAKE_CURRENT_SOURCE_DIR}/osx_menu.m
	)
target_sources(EDOProStatic PRIVATE ${EDOPRO_CLIENT_SOURCE})
